changing mathing rules to cpature more activities
